deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ginger
  namespace: ginger
spec:
  type: ClusterIP
  selector:
    app: ginger
  ports:
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
    - name: otlp-http
      port: 4318
      targetPort: 4318
    - name: query
      port: 16686
      targetPort: 16686
    - name: admin
      port: 13133
      targetPort: 13133
    - name: jaeger-compact
      port: 6831
      protocol: UDP
    - name: jaeger-binary
      port: 6832
      protocol: UDP
    - name: zipkin
      port: 9411
      targetPort: 9411
